--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:8000",
   "devDependencies": {
     "tailwindcss": "^3.3.5"
   }
